// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a Welcome screen with customized branding 1`] = `
<EuiPortal>
  <div
    className="homWelcome"
  >
    <header
      className="homWelcome__header"
    >
      <div
        className="homWelcome__content eui-textCenter"
      >
        <EuiSpacer
          size="xl"
        />
        <div
          className="homWelcome__customLogoContainer"
        >
          <img
            alt="logo"
            className="homWelcome__customLogo"
            data-test-image-url="/custom"
            data-test-subj="welcomeCustomLogo"
            src="/custom"
          />
        </div>
        <EuiTitle
          className="homWelcome__title"
          data-test-subj="welcomeCustomTitle"
          data-test-title-message="Welcome to custom title"
          size="l"
        >
          <h1>
            <FormattedMessage
              defaultMessage="Welcome to custom title"
              id="home.welcomeTitle"
              values={Object {}}
            />
          </h1>
        </EuiTitle>
        <EuiSpacer
          size="m"
        />
      </div>
    </header>
    <div
      className="homWelcome__content homWelcome-body"
    >
      <EuiFlexGroup
        gutterSize="l"
      >
        <EuiFlexItem>
          <SampleDataCard
            onConfirm={[Function]}
            onDecline={[Function]}
            urlBasePath="/"
          />
          <EuiSpacer
            size="s"
          />
        </EuiFlexItem>
      </EuiFlexGroup>
    </div>
  </div>
</EuiPortal>
`;

exports[`should render a Welcome screen with no telemetry disclaimer 1`] = `
<EuiPortal>
  <div
    className="homWelcome"
  >
    <header
      className="homWelcome__header"
    >
      <div
        className="homWelcome__content eui-textCenter"
      >
        <EuiSpacer
          size="xl"
        />
        <div
          className="homWelcome__customLogoContainer"
        >
          <img
            alt="logo"
            className="homWelcome__customLogo"
            data-test-image-url="/"
            data-test-subj="welcomeCustomLogo"
            src="/"
          />
        </div>
        <EuiTitle
          className="homWelcome__title"
          data-test-subj="welcomeCustomTitle"
          data-test-title-message="Welcome to OpenSearch Dashboards"
          size="l"
        >
          <h1>
            <FormattedMessage
              defaultMessage="Welcome to OpenSearch Dashboards"
              id="home.welcomeTitle"
              values={Object {}}
            />
          </h1>
        </EuiTitle>
        <EuiSpacer
          size="m"
        />
      </div>
    </header>
    <div
      className="homWelcome__content homWelcome-body"
    >
      <EuiFlexGroup
        gutterSize="l"
      >
        <EuiFlexItem>
          <SampleDataCard
            onConfirm={[Function]}
            onDecline={[Function]}
            urlBasePath="/"
          />
          <EuiSpacer
            size="s"
          />
        </EuiFlexItem>
      </EuiFlexGroup>
    </div>
  </div>
</EuiPortal>
`;

exports[`should render a Welcome screen with the default OpenSearch Dashboards branding 1`] = `
<EuiPortal>
  <div
    className="homWelcome"
  >
    <header
      className="homWelcome__header"
    >
      <div
        className="homWelcome__content eui-textCenter"
      >
        <EuiSpacer
          size="xl"
        />
        <span
          className="homWelcome__logo"
        >
          <EuiIcon
            size="original"
            type="test-file-stub"
          />
        </span>
        <EuiTitle
          className="homWelcome__title"
          data-test-subj="welcomeCustomTitle"
          data-test-title-message="Welcome to OpenSearch Dashboards"
          size="l"
        >
          <h1>
            <FormattedMessage
              defaultMessage="Welcome to OpenSearch Dashboards"
              id="home.welcomeTitle"
              values={Object {}}
            />
          </h1>
        </EuiTitle>
        <EuiSpacer
          size="m"
        />
      </div>
    </header>
    <div
      className="homWelcome__content homWelcome-body"
    >
      <EuiFlexGroup
        gutterSize="l"
      >
        <EuiFlexItem>
          <SampleDataCard
            onConfirm={[Function]}
            onDecline={[Function]}
            urlBasePath="/"
          />
          <EuiSpacer
            size="s"
          />
        </EuiFlexItem>
      </EuiFlexGroup>
    </div>
  </div>
</EuiPortal>
`;

exports[`should render a Welcome screen with the telemetry disclaimer when optIn is false 1`] = `
<EuiPortal>
  <div
    className="homWelcome"
  >
    <header
      className="homWelcome__header"
    >
      <div
        className="homWelcome__content eui-textCenter"
      >
        <EuiSpacer
          size="xl"
        />
        <div
          className="homWelcome__customLogoContainer"
        >
          <img
            alt="logo"
            className="homWelcome__customLogo"
            data-test-image-url="/"
            data-test-subj="welcomeCustomLogo"
            src="/"
          />
        </div>
        <EuiTitle
          className="homWelcome__title"
          data-test-subj="welcomeCustomTitle"
          data-test-title-message="Welcome to OpenSearch Dashboards"
          size="l"
        >
          <h1>
            <FormattedMessage
              defaultMessage="Welcome to OpenSearch Dashboards"
              id="home.welcomeTitle"
              values={Object {}}
            />
          </h1>
        </EuiTitle>
        <EuiSpacer
          size="m"
        />
      </div>
    </header>
    <div
      className="homWelcome__content homWelcome-body"
    >
      <EuiFlexGroup
        gutterSize="l"
      >
        <EuiFlexItem>
          <SampleDataCard
            onConfirm={[Function]}
            onDecline={[Function]}
            urlBasePath="/"
          />
          <EuiSpacer
            size="s"
          />
          <EuiTextColor
            className="euiText--small"
            color="subdued"
          >
            <FormattedMessage
              defaultMessage="To learn about how usage data helps us manage and improve our products and services, see our "
              id="home.dataManagementDisclaimerPrivacy"
              values={Object {}}
            />
            <EuiLink
              rel="noopener"
              target="_blank"
            >
              <FormattedMessage
                defaultMessage="Privacy Statement."
                id="home.dataManagementDisclaimerPrivacyLink"
                values={Object {}}
              />
            </EuiLink>
            <FormattedMessage
              defaultMessage=" To start collection, "
              id="home.dataManagementEnableCollection"
              values={Object {}}
            />
            <EuiLink
              href="rootmanagement/opensearch-dashboards/settings"
            >
              <FormattedMessage
                defaultMessage="enable usage data here."
                id="home.dataManagementEnableCollectionLink"
                values={Object {}}
              />
            </EuiLink>
          </EuiTextColor>
          <EuiSpacer
            size="xs"
          />
        </EuiFlexItem>
      </EuiFlexGroup>
    </div>
  </div>
</EuiPortal>
`;

exports[`should render a Welcome screen with the telemetry disclaimer when optIn is true 1`] = `
<EuiPortal>
  <div
    className="homWelcome"
  >
    <header
      className="homWelcome__header"
    >
      <div
        className="homWelcome__content eui-textCenter"
      >
        <EuiSpacer
          size="xl"
        />
        <div
          className="homWelcome__customLogoContainer"
        >
          <img
            alt="logo"
            className="homWelcome__customLogo"
            data-test-image-url="/"
            data-test-subj="welcomeCustomLogo"
            src="/"
          />
        </div>
        <EuiTitle
          className="homWelcome__title"
          data-test-subj="welcomeCustomTitle"
          data-test-title-message="Welcome to OpenSearch Dashboards"
          size="l"
        >
          <h1>
            <FormattedMessage
              defaultMessage="Welcome to OpenSearch Dashboards"
              id="home.welcomeTitle"
              values={Object {}}
            />
          </h1>
        </EuiTitle>
        <EuiSpacer
          size="m"
        />
      </div>
    </header>
    <div
      className="homWelcome__content homWelcome-body"
    >
      <EuiFlexGroup
        gutterSize="l"
      >
        <EuiFlexItem>
          <SampleDataCard
            onConfirm={[Function]}
            onDecline={[Function]}
            urlBasePath="/"
          />
          <EuiSpacer
            size="s"
          />
          <EuiTextColor
            className="euiText--small"
            color="subdued"
          >
            <FormattedMessage
              defaultMessage="To learn about how usage data helps us manage and improve our products and services, see our "
              id="home.dataManagementDisclaimerPrivacy"
              values={Object {}}
            />
            <EuiLink
              rel="noopener"
              target="_blank"
            >
              <FormattedMessage
                defaultMessage="Privacy Statement."
                id="home.dataManagementDisclaimerPrivacyLink"
                values={Object {}}
              />
            </EuiLink>
            <FormattedMessage
              defaultMessage=" To stop collection, "
              id="home.dataManagementDisableCollection"
              values={Object {}}
            />
            <EuiLink
              href="rootmanagement/opensearch-dashboards/settings"
            >
              <FormattedMessage
                defaultMessage="disable usage data here."
                id="home.dataManagementDisableCollectionLink"
                values={Object {}}
              />
            </EuiLink>
          </EuiTextColor>
          <EuiSpacer
            size="xs"
          />
        </EuiFlexItem>
      </EuiFlexGroup>
    </div>
  </div>
</EuiPortal>
`;
